--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>挨拶</title>
+    <title>概要</title>
 </head>
+
 <body>
-    <h1 th:text="'こんにちは、' + ${name} + 'さん！'">こんにちは、ゲストさん！</h1>
+    <h1 th:text="'こんにちは、' + ${name} + 'さん！'">こんにちは！</h1>
     <!-- 相対パスまたはth:hrefを使用 -->
+    <p>最後の答えがわかったら前にきておしえてください！</p>
     <p><a th:href="@{/}">ホームに戻る</a></p>
 </body>
+
 </html>
