--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>ホーム</title>
 </head>
+
 <body>
-    <h1 th:text="${message}">デフォルトメッセージ</h1>
+    <h1 th:text="${message}">2025/05 ユニットフェス by DXサービスユニット</h1>
     <!-- 相対パスまたはth:hrefを使用 -->
-    <p><a th:href="@{/hello}">挨拶ページへ</a></p>
+    <p><a th:href="@{/hello}">概要</a></p>
 </body>
+
 </html>
