ページ修正

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <h1>このページははずれ</h1>
+    <h1>このページははずれです！</h1>
+    <h2>正解のページを探して！</h2>
     <p th:text="${status} + ' ' + ${error}"></p>
     <!-- <p th:text="${message}"></p>
     <p th:if="${exception != null}">
