--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 th:text="${message}">2025/05 ユニットフェス by DXサービスユニット</h1>
+    <h1>2025/05 ユニットフェス by DXサービスユニット</h1>
     <!-- 相対パスまたはth:hrefを使用 -->
     <p><a th:href="@{/hello}">概要</a></p>
 </body>
