--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 th:text="'こんにちは、' + ${name} + 'さん！'">こんにちは！</h1>
+    <h1>みなさんこんにちは！</h1>
     <!-- 相対パスまたはth:hrefを使用 -->
     <p>最後の答えがわかったら前にきておしえてください！</p>
     <p><a th:href="@{/}">ホームに戻る</a></p>
