・ダミーページの新規追加・正解ページのファイル名、表示内容修正

--- a/src/main/resources/templates/20250532.html
+++ b/src/main/resources/templates/20250532.html
@@ -105,13 +105,13 @@
 <body>
     <h1>正解です！</h1>
 
-    <div class="celebration-icon">🎊</div>
-    <h2>おめでとうございます！正解です！</h2>
+<!--    <div class="celebration-icon">🎊🥳</div>-->
+    <h2>おめでとうございます！正解です🎊🥳</h2>
 
     <div class="message-box">
 
         <p>- 最終問題 -</p>
-        <p>DXサービスユニットのユニットビジョンは何ですか？</p>
+        <p>DXサービスユニットのパーパスは何ですか？</p>
 
 		<p>答えがわかったら、前にきて教えてください！</p>
     </div>
