Add mokumoku page with controller endpoint and link from index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -161,6 +161,7 @@
     <div class="links">
         <!-- 相対パスまたはth:hrefを使用 -->
         <p><a th:href="@{/hello}">概要</a></p>
+        <p><a th:href="@{/unitfes/mokumoku}">もくもく会</a></p>
     </div>
 
     <script>
